--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,10 @@
 [init]
-i_wcheck = 1
+i_wcheck = 0
 
 [user]
-u_params = ['Rent', 'Food', 'Entertainment', 'Transport', 'Phone', 'Misc', 'Stationery']
-u_values = [190.0, 5.0, 15.0, 10.0, 50.0, 15.0, 5.0]
-u_rmndr = [-180.0, 190, 55.0, -27.0, 12.0, 56.0, 19.0]
+u_params = ['Rent', 'Food', 'Entertainment', 'Transport', 'Phone', 'Misc', 'Gym', 'Spotfiy']
+u_values = [190.0, 90.0, 15.0, 10.0, 5.0, 15.0, 8.0, 2.0]
+u_rmndr = [190.0, 90.0, 15.0, 10.0, 5.0, 15.0, 8.0, 2.0]
 u_inc = 270.0
-u_goal = -20.0
+u_goal = -65.0
 
